--- a/gb/20/8/26/n12358332.md
+++ b/gb/20/8/26/n12358332.md
@@ -1,69 +1,68 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/spaktb3504/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/spaktb3504/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/spaktb3504/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/spaktb3504/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/spaktb3504/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/spaktb3504/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/spaktb3504/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/spaktb3504/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>翻修屋顶：改善房屋外观的最佳方式</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/GettyImages-496944212.jpg" />
 <h6>改造房屋外观的最佳方式是翻修屋顶，可为老旧的房屋外观增添现代气息。（PHILIPPE HUGUEN/AFP/Getty Images）
 </h6>
 <hr>
-<p>【大纪元2020年08月26日讯】（大纪元记者李昭晖澳洲悉尼编译报导）如果你问<ahref="https://github.com/spaktb3504/djy/blob/master/gb/tag/%E6%88%BF%E5%B1%8B%E8%A3%85%E4%BF%AE.md#1">房屋装修</a>者，改造房屋外观的最佳方式是什么，他们的回答可能包括重新粉刷、重新电镀、油漆、装围栏、景观美化，以及翻修车道和走道。</p>
+<p>【大纪元2020年08月26日讯】（大纪元记者李昭晖澳洲悉尼编译报导）如果你问<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%88%BF%E5%B1%8B%E8%A3%85%E4%BF%AE.md#1">房屋装修</a>者，改造房屋外观的最佳方式是什么，他们的回答可能包括重新粉刷、重新电镀、油漆、装围栏、景观美化，以及翻修车道和走道。</p>
 <p>这些方法当然都行之有效，但想要为老旧的房屋外观增添现代气息，它们需要花很长的时间。然而，有一个关键的方法将助您最快地改善房屋外观。</p>
-<p>这是一个经常被忽视的方案，因为太贵、太难——<ahref="https://github.com/spaktb3504/djy/blob/master/gb/tag/%E7%BF%BB%E4%BF%AE%E5%B1%8B%E9%A1%B6.md#1">翻修屋顶</a>。</p>
+<p>这是一个经常被忽视的方案，因为太贵、太难——<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BF%BB%E4%BF%AE%E5%B1%8B%E9%A1%B6.md#1">翻修屋顶</a>。</p>
 <p>不需要更换屋顶。对现有屋顶和屋顶轮廓线的细微调整就足以改变住宅的外观和给人的感觉。</p>
 <p>通过打造更好的焦点、增加深度和房屋对比度，可以巧妙地为房屋增加视觉趣味。遗憾的是，这是大多数DIY家居装修中缺少的一个关键元素。</p>
 <p>看看上世纪60到80年代大多数家庭的屋顶吧。把这些屋顶和新的屋顶比较一下，你会发现，比起没有任何其他功能的简单屋顶，现代的房屋通常具有不同的屋顶高度和方向。</p>
 <p>如果您能对自家屋顶做哪怕一点小小的调整，这都会有助于改善房屋：比如说调整门廊屋顶或入口处的某种结构。确保您做的每件事都考虑到全局，这样所有的装修部分才能具有连贯性和统一的风格。</p>
 <p>比如，通过给新修的停车位上加一个百叶顶棚，就为入口处增加了一条走道。这个顶棚连接到房屋的旧屋顶上，彻底改变了房屋外观，使其变得更具现代感。</p>
 <p>调整屋顶是完成房屋翻新最有效的方法之一。如果做得好，可以在没有高成本的前提下，使房屋变得更引人注目和具有时尚气息。</p>
-<p>责任编辑：瑞木悦</p>
+<p>责任编辑：瑞木悦◇</p>
 <p>&nbsp;</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/7/23/n12277737.md#1">浴室装修中三项物有所值的花费</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/7/26/n12283891.md#1">房产装修补助金标准太窄 限制了领取范围</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/7/27/n12287661.md#1">盘点美国最宜自己动手的家居装修</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/7/29/n12291762.md#1">降低装修成本的五个简单而有效的方法</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/5/n12308301.md#1">8个常见的翻修错误以及应如何避免</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/11/n12323193.md#1">美疫期房屋装修新潮流 建泳池需求大增</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/13/n12327648.md#1">专家教你花小钱办大事 有限预算改善家居体验</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/18/n12338730.md#1">墨尔本一住宅装修得当 封锁令下卖出高价</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/19/n12342411.md#1">粉刷时千万不要犯的9个错误</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/19/n12342337.md#1">准备换墙纸的5个步骤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/23/n12277737.md#1">浴室装修中三项物有所值的花费</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/26/n12283891.md#1">房产装修补助金标准太窄 限制了领取范围</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/27/n12287661.md#1">盘点美国最宜自己动手的家居装修</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/29/n12291762.md#1">降低装修成本的五个简单而有效的方法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/5/n12308301.md#1">8个常见的翻修错误以及应如何避免</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/11/n12323193.md#1">美疫期房屋装修新潮流 建泳池需求大增</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/13/n12327648.md#1">专家教你花小钱办大事 有限预算改善家居体验</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/18/n12338730.md#1">墨尔本一住宅装修得当 封锁令下卖出高价</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/23/n13667260.md#1">2022年最令人期待的五大设计趋势</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13650079.md#1">看星星 家用电器的能源等级到底意味着什么</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10714814.md#1" target="_blank">川普总统在93号航班9·11悼念仪式上的讲话全文</a></li><li><a href="https://github.com/spaktb3504/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">修炼人的故事：从地狱到天堂</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/13/n12326957.md#1">孟尝君“狡兔三窟”为何绝子绝孙？</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/16/n12335682.md#1">神秘的中国绝代王后（下）</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/21/n12347600.md#1">七夕有哪些古风情？考古发现源流久远</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/25/n12356959.md#1">【直播】共和党大会第二日演讲：机遇之地</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/25/n12355059.md#1">【十字路口】川普若连任 中共扫下历史舞台？</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/25/n12356989.md#1">【新闻第一现场】四川洪水来袭 多户惨遭灭门</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/24/n12352546.md#1">【翻墙必看】官二代爆王沪宁给习出馊主意</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/24/n12352544.md#1">田云：党媒连发5篇社论 中共急于表白什么？</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/7/28/n12290301.md#1">【思想领袖】章家敦：中共的行为已失控</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/23/n12351787.md#1">黄秋生返港大赞台湾 悲叹香港千疮百孔</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/24/n12354392.md#1">范冰冰遭吴秀波起诉 疑涉李晨执导影片分账</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/23/n12351932.md#1">小童被迫看捧习书籍 杜汶泽嘲讽中共</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/25/n12357141.md#1">65岁张国立被搀扶拍戏 传遭吸毒家暴儿害惨</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/23/n12352130.md#1">58岁知名导演陈木胜罹癌离世 香港众星悼念</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/22/n12350389.md#1">燕麦控三高助减肥 有7大好处 挑对更能稳血糖</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/24/n12354004.md#1">失智症能潜伏几十年？出现8个征兆要当心</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/24/n12352785.md#1">万名印度人在台做啥？ 印籍中研院学者揭密</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/23/n12351096.md#1">四川母狗跳入洪水中救回宝宝 感动人心</a></li>
-<li><a href="https://github.com/spaktb3504/djy/blob/master/gb/20/8/23/n12351199.md#1">日本农民在成田机场种菜几十年 就是不搬走</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/spaktb3504/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/spaktb3504/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12358332.htm">翻修屋顶：改善房屋外观的最佳方式</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12358332.htm">翻修屋顶：改善房屋外观的最佳方式</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/spaktb3504/djy/blob/master/gb/20/8/26/n12358332.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/spaktb3504/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/spaktb3504/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/spaktb3504/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/spaktb3504/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/spaktb3504/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/8/26/n12358332.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
